Accept extension module in TestingDeltaLakePlugin
Similar to how `TestingHivePlugin` does it.